welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
    var color:Boolean
        ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (!estFaceMur){avance()}
                           ^SlugTracking:6: error: not found: value getCoulerSol
   else if (getCoulerSol()==Color.green){avance}
            ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
   else if (getCoulerSol()==Color.green){avance}
                                         ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
   else if (getCoulerSol()==Color.green){avance}
        ^